# stream-grid

./: .env.codesign-off  .env.example  .eslintrc.js  .gitignore.backup.20251031_231458  AUTHORS.md  CODE_OF_CONDUCT.md  LEARNINGS.md  LICENSE  PROJECT_STATUS.md  README.md  StreamGRID.app  StreamGRID.app alias  TODO.md  claude.md  compile-build-dist-universal.sh  eslint.config.js  index.html  package-lock.json  package.json  run-linux.sh  run-macos.sh  run-source-linux.sh  run-source-macos.sh  run-source-windows.bat  run-windows-source.bat  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts
archive/legacy-python-implementations/main-package/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  run-minimal.sh  run.sh  setup.cfg  setup.py  upgrade-from-old-version.sh
archive/legacy-python-implementations/main-package/scripts/: build_macos_app.sh  run_minimal.sh
archive/legacy-python-implementations/main-package/tests/: __init__.py
archive/legacy-python-implementations/main-package/tests/integration/: __init__.py
archive/legacy-python-implementations/main-package/tests/unit/: __init__.py  test_file_utils.py  test_video_tile.py
archive/legacy-python-implementations/main-package/videowall/: __main__.py
archive/legacy-python-implementations/main-package/videowall/config/: settings.py
archive/legacy-python-implementations/main-package/videowall/core/: animator.py  app.py  display_manager.py  video_loader.py  (+2 more)
archive/legacy-python-implementations/main-package/videowall_env/: pyvenv.cfg
(+126 files in other folders)
