[metadata]
name = videowall
description = Multi-Monitor Video Wall with M3U8 and Local Video Support
author = Jason Paul Michaels
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Development Status :: 4 - Beta
    Environment :: MacOS X
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Video :: Display

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.7
install_requires =
    PyQt5>=5.15.0
    requests>=2.25.0

[options.packages.find]
exclude =
    tests
    examples

[options.entry_points]
console_scripts =
    videowall = videowall.core.app:main

[options.package_data]
videowall =
    resources/icons/*.png
    resources/icons/*.icns
    resources/styles/*.qss

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203,W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*